fixed numb nowrap

--- a/css/style.scss
+++ b/css/style.scss
@@ -256,7 +256,6 @@ body{
         padding: 0px 18px 35px 12px;
         position: relative;
 
-
         &-images{
             position: absolute;
             top: -75px;
@@ -292,6 +291,7 @@ body{
                 font-size: 59px;
                 line-height: 70px;
                 color: #353535;
+                white-space: nowrap;
 
                 & span{
                     font-size: 35px;
